--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,8 @@
   "require": {
     "php": "^8.1|^8.2|^8.3|^8.4",
     "guzzlehttp/guzzle": "^7.5",
-    "illuminate/contracts": "^9.0|^10.0|^11.0",
-    "illuminate/support": "^9.0|^10.0|^11.0",
+    "illuminate/contracts": "^9.0|^10.0|^11.0|^12.0",
+    "illuminate/support": "^9.0|^10.0|^11.0|^12.0",
     "ratchet/pawl": "^0.4.1",
     "react/event-loop": "^1.3",
     "react/socket": "^1.12"
